[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[project]
name = "hatch"
description = "Modern, extensible Python project management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = [
  "build",
  "dependency",
  "environment",
  "hatch",
  "packaging",
  "plugin",
  "publishing",
  "release",
  "versioning",
]
authors = [
  { name = "Ofek Lev", email = "oss@ofek.dev" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "click>=8.0.6",
  "hatchling<1.22",
  "httpx>=0.22.0",
  "hyperlink>=21.0.0",
  "keyring>=23.5.0",
  "packaging>=21.3",
  "pexpect~=4.8",
  "platformdirs>=2.5.0",
  "rich>=11.2.0",
  "shellingham>=1.4.0",
  "tomli-w>=1.0",
  "tomlkit>=0.11.1",
  "userpath~=1.7",
  "virtualenv>=20.16.2",
  "zstandard<1",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://hatch.pypa.io/latest/"
Sponsor = "https://github.com/sponsors/ofek"
History = "https://hatch.pypa.io/dev/history/hatch/"
Tracker = "https://github.com/pypa/hatch/issues"
Source = "https://github.com/pypa/hatch"

[project.scripts]
hatch = "hatch.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"
parentdir_prefix_version = "hatch-"
git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "hatch-v*"]

[tool.hatch.build.hooks.vcs]
version-file = "src/hatch/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/backend",
  "/scripts",
]

[tool.mypy]
disallow_untyped_defs = false
disallow_incomplete_defs = false
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
warn_no_return = false
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "*.hatchling.*",
    "*.hatch.utils.*",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_no_return = true

[tool.coverage.run]
branch = true
source_pkgs = ["hatch", "hatchling", "tests"]
omit = [
  "backend/src/hatchling/__main__.py",
  "backend/src/hatchling/bridge/*",
  "backend/src/hatchling/ouroboros.py",
  "src/hatch/__main__.py",
  "src/hatch/cli/new/migrate.py",
  "src/hatch/utils/shells.py",
]

[tool.coverage.paths]
hatch = ["src/hatch", "*/hatch/src/hatch"]
hatchling = ["backend/src/hatchling", "*/hatch/backend/src/hatchling"]
tests = ["tests", "*/hatch/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 120

# https://github.com/astral-sh/ruff/issues/8627
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv", "dist"]

[tool.ruff.format]
preview = true
quote-style = "single"
docstring-code-format = true
docstring-code-line-length = 80

[tool.ruff.lint]
preview = true
select = [
  "A001",
  "A002",
  "A003",
  "ARG001",
  "ARG002",
  "ARG003",
  "ARG004",
  "ARG005",
  "ASYNC100",
  "ASYNC101",
  "ASYNC102",
  "B",
  "BLE001",
  "C4",
  "COM818",
  "DTZ",
  "E",
  "EM101",
  "EM102",
  "EM103",
  "EXE",
  "F",
  "FA100",
  "FA102",
  "FBT001",
  "FBT002",
  "FLY002",
  "FURB",
  "G",
  "I001",
  "I002",
  "ICN001",
  "ICN002",
  "ICN003",
  "INP001",
  "INT001",
  "INT002",
  "INT003",
  "ISC003",
  "LOG001",
  "LOG002",
  "LOG007",
  "LOG009",
  "N",
  "PERF101",
  "PERF102",
  "PERF401",
  "PERF402",
  "PERF403",
  "PGH005",
  "PIE790",
  "PIE794",
  "PIE796",
  "PIE800",
  "PIE804",
  "PIE807",
  "PIE808",
  "PIE810",
  "PLC0105",
  "PLC0131",
  "PLC0132",
  "PLC0205",
  "PLC0208",
  "PLC0414",
  "PLC0415",
  "PLC1901",
  "PLC2401",
  "PLC2403",
  "PLC2701",
  "PLC2801",
  "PLC3002",
  "PLE",
  "PLR0124",
  "PLR0133",
  "PLR0202",
  "PLR0203",
  "PLR0206",
  "PLR0402",
  "PLR1701",
  "PLR1704",
  "PLR1711",
  "PLR1714",
  "PLR1722",
  "PLR1733",
  "PLR1736",
  "PLR2004",
  "PLR2044",
  "PLR5501",
  "PLR6201",
  "PLR6301",
  "PLW",
  "PT",
  "PYI",
  "RET",
  "RSE102",
  "RUF",
  "S",
  "SIM",
  "SLF001",
  "SLOT000",
  "SLOT001",
  "SLOT002",
  "T100",
  "T201",
  "T203",
  "TCH",
  "TD004",
  "TD005",
  "TD006",
  "TD007",
  "TID251",
  "TID252",
  "TID253",
  "TRIO",
  "TRY",
  "UP",
  "W291",
  "W292",
  "W293",
  "W505",
  "W605",
  "YTT",
]
ignore = [
  "B027",  # an empty method in an abstract base class, but has no abstract decorator
  # Allow lazy imports for responsive CLI
  "PLC0415",
  "FURB101",  # `open` and `read` should be replaced by
  "PT004",  # Fixture does not return anything, add leading underscore
  "S404",  # `subprocess` module is possibly insecure
  "S603",  # `subprocess` call - check for execution of untrusted input
  "SIM401",

]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.extend-per-file-ignores]
"backend/src/hatchling/bridge/app.py" = ["T201"]
"backend/tests/downstream/integrate.py" = ["INP001", "T201"]
"docs/.hooks/*" = ["INP001", "T201"]
"release/macos/build_pkg.py" = ["INP001"]
"**/scripts/*" = ["INP001", "T201"]
"**/tests/**/*" = ["PLC1901", "PLR2004", "PLR6301", "S", "TID252"]

[tool.ruff.lint.isort]
known-first-party = ["hatch", "hatchling"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false